# nf-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/grammers/: nf.lark
nf_parser/: __init__.py  nextflow.py  nf.lark  parser.py  schemas.py  utils.py
nf_parser/grammer/: nf.lark
nf_parser/transformers/: __init__.py  nextflow.py
tests/: test_nf_parser.py
tests/samples/: 1.nf  2.nf  3.nf
